@@ -3,6 +3,7 @@ package net.ironoc.portfolio.utils;
 import net.ironoc.portfolio.logger.AbstractLogger;
 import org.springframework.stereotype.Component;
 
+import java.net.URI;
 import java.net.URL;
 
 @Component
@@ -10,7 +11,7 @@ public class UrlUtils extends AbstractLogger {
 
     public boolean isValidURL(String urlString) {
         try {
-            URL url = new URL(urlString);
+            URL url = URI.create(urlString).toURL();
             url.toURI();
             return true;
         } catch (Exception e) {
